# ReStar

./: Cargo.toml  README.md
src/: app.rs  llm.rs  main.rs  tools.rs  types.rs
src/views/: chat.rs  file_select.rs  mod.rs
