[package]
name = "逆星"
version = "1.1.1"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = true }
egui = { version = "0.29", features = ["default"] }
image = { version = "0.25.2", features = ["png", "jpeg"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0.102"
encoding_rs = "0.8.35"
